03/07 导航栏特效

--- a/css/3dnav.css
+++ b/css/3dnav.css
@@ -1,4 +1,4 @@
-@import url("http://www.w3cplus.com/demo/css3/base.css");
+@import url("base.css");
 @font-face{
     font-family: 'sansationregular';
     font-weight: normal;
