--- a/css/3dpic.css
+++ b/css/3dpic.css
@@ -103,3 +103,11 @@ a:hover{text-decoration: none}
     margin:.2rem 0 .5rem 0;
     font-size:20px;
 }
+.item:hover img{
+    box-shadow: none;
+    border-radius: 15px;
+}
+.item:hover .info{
+    box-shadow: 0 3px 8px rgba(0,0,0,.3);
+    border-radius:3px;
+}
