--- a/css/bc.css
+++ b/css/bc.css
@@ -3,7 +3,7 @@ img.bg{
     min-height:100%;
     min-width:1024px;
     width:100%;
-    height:auto;!important;
+    height:auto !important;
     position: fixed;
     top: 0;
     left:50%;
@@ -154,9 +154,9 @@ img.bg{
 }
 .rotate:target{
     z-index: 100;
-    -webkit-animation: roate 1s 1;
-    -o-animation: roate 1s 1;
-    animation: roate 1s 1;
+    -webkit-animation: rotate 1s 1;
+    -o-animation: rotate 1s 1;
+    animation: rotate 1s 1;
 }
 /*not target*/
 @keyframes notTarget {
